temp header padding fix and white space trim

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,13 @@ html {
 
 .navbar-brand, h4{
     height: 40px;
-    padding-left: 30px
+}
+
+@media (min-width: 992px) {
+  .navbar-brand h4 {
+    height: 40px;
+    padding-left: 30px;
+  }
 }
 
 .navbar-nav, li{
@@ -151,7 +157,7 @@ html {
 .services .col-md-3:hover{
     background: #03af65;
     cursor: pointer;
-    transition: 0.7s 
+    transition: 0.7s
 }
 /*Team*/
 #team{
@@ -201,7 +207,7 @@ ul > li{
     filter: grayscale(0);
     cursor: pointer;
     scale: 110%;
-    transition: 0.7s 
+    transition: 0.7s
 }
 
 .name{
